<resources>
    <string name="app_name">Janata Transpo</string>
    <string name="get_information">Get Information</string>
    <string name="hard_soft_info">Hardware and Software Information</string>
    <string name="serial">SERIAL: </string>
    <string-array name="model">
        <item>--Select Modal--</item>
        <item>Modal 1</item>
        <item>Modal 2</item>
        <item>Modal 3</item>
        <item>Modal 4</item>
    </string-array>
    <string name="id">ID: </string>
    <string name="manufacturer">MANUFACTURER: </string>
    <string name="brand">BRAND: </string>
    <string name="type">TYPE: </string>
    <string name="user">USER: </string>
    <string name="base">BASE: </string>
    <string name="incremental">INCREMENTAL: </string>
    <string name="sdk">SDK: </string>
    <string name="board">BOARD: </string>
    <string name="host">HOST: </string>
    <string name="fingerprint">FINGERPRINT: </string>
    <string name="versioncode">VERSION CODE: </string>
    <string name="session_expired">Session Expired</string>
    <string name="session_expired_msg">Your session is expired. Please login again for continue.</string>
    <string name="login_msg">If you want to check this section, You need to login.</string>
    <string name="title_applied"><u>Applied</u></string>
    <string name="title_need_help">Need Help ?</string>
    <string name="exit">Exit</string>
    <string name="language">English</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="internet_connection_required">Internet connection is required to run this app. Turn on mobile-network/Wi-Fi.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="email">Enter Email Id</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Enter Password</string>
    <string name="imei_namber">IMEI Number</string>
    <string name="loading">Loading Please wait</string>
    <string name="change_password">Change Password</string>
    <string name="old_password_hint">Enter Old Password</string>
    <string name="new_password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="registered_email_hint">Email Id</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="customer_name_hint">Company Name</string>
    <string name="runtime_permissions_txt"><![CDATA[Settings->Permission->Enable All Permissions.         \\n Please enable ALL permissions from app settings.]]></string>
    <string name="customer_name_textview">Customer Name :</string>
    <string name="customer_contact_textview">Customer Contact :</string>
    <string name="customer_enquiry_source">Enquiry Source :</string>
    <string name="customer_enquiry_type">Enquiry Type :</string>
    <string name="customer_enquiry_name">Enquiry Name :</string>
    <string name="customer_enquiry_start_date">Start date :</string>
    <string name="customer_enquiry_follow_up_date">Follow up date :</string>
    <string name="customer_expected_value">Expected Value :</string>
    <string name="in_time_hint">Pick In Time</string>
    <string name="internet_not_avilable">Internet Connection is Not Available</string>
    <string name="add">Add</string>
    <string name="search">search</string>
    <string name="gst_number_hint">GST Number</string>
    <string name="address_hint">Address Line 1</string>
    <string name="compressair">Compressor Air Application</string>
    <string name="area_hint">Area</string>
    <string name="next">Next</string>
    <string name="designation_hint">Designation</string>
    <string name="contact_person_name_hint">Contact Person Name</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="visit_date_hint">Pick Visit Date*</string>
    <string name="visit_time_hint">Pick Visit Time</string>
    <string name="remark_hint">Remark</string>
    <string name="retry">Retry</string>
    <string name="won_value_hint">Won Value</string>
    <string name="nearest_bidder_oem_hint">Nearest Bidder OEM</string>
    <string name="nearest_bidding_value_hint">Nearest Bidding Value</string>
    <string name="lost_value_hint">Lost Value</string>
    <string name="oem_hint">OEM</string>
    <string-array name="industry_type">
        <item>--Select Industry--</item>
        <item>Chemical</item>
        <item>Mechanical</item>
        <item>Electrical</item>
        <item>Automobile</item>
    </string-array>
    <string-array name="department">
        <item>--Select Department--</item>
        <item>Department 1</item>
        <item>Department 2</item>
        <item>Department 3</item>
        <item>Department 4</item>
    </string-array>
    <string-array name="relation_status">
        <item>Self</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Mother</item>
        <item>Father</item>
        <item>Other</item>
    </string-array>
    <string-array name="collection_mode">
        <item>Cash</item>
        <item>Cheque</item>
        <item>DD</item>
    </string-array>
    <string-array name="attempted_status">
        <item>Delivered</item>
        <item>Not Delivered</item>
    </string-array>
    <string-array name="spinner_list">
        <item>City</item>
        <item>Branch</item>
        <item>State</item>
    </string-array>
    <string-array name="usertype_list">
        <item>Employee</item>
        <item>Franchies</item>
    </string-array>
    <string-array name="product">
        <item>--Select Product--</item>
        <item>Product 1</item>
        <item>Product 2</item>
        <item>Product 3</item>
        <item>Product 4</item>
    </string-array>
    <string-array name="visit_type">
        <item>--Select Visit Type--</item>
        <item>Visit Type 1</item>
        <item>Visit Type 2</item>
        <item>Visit Type 3</item>
        <item>Visit Type 4</item>
    </string-array>
    <string-array name="load_type">
        <item>Full Load</item>
        <item>Part Load</item>
    </string-array>
    <string-array name="lost_reasons">
        <item>Select Pickup Location</item>
        <item>Low Cost</item>
    </string-array>
    <string-array name="win_reasons">
        <item> Select Destination Location </item>
        <item>More Features</item>
        <item>Low Cost</item>
        <item>Better Service</item>
    </string-array>
    <string-array name="compitators">
        <item>Compitators </item>
        <item>Yes</item>
        <item>No</item>

    </string-array>
    <string name="calendar_title_format">MMMM yyyy</string>
    <string name="calendar_dayofweek_format">E</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="login">Login</string>
    <string name="tab_title">Customer Details</string>
    <string name="address_hint2">Address Line 2</string>
    <string name="follow_date">Follow-up\n date*</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_1">swapnil</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="registration">Registration</string>
    <string name="user_name_hint">User Name</string>
    <string name="pickup_request_string">Send or recieve your valuable items \n is easy and secure now</string>
    <string name="track_shipment_string">Now track your shipment with easy and \n in quick steps</string>
    <string name="we_send_you_otp">WE\'VE SENT YOU A 6 DIGIT OTP VIA SMS TO THIS MOBILE NO. </string>
    <string name="calculate">Calculate</string>
    <string name="awb_number">Enter AWB Number</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="select_date">Select Date</string>
    <string name="oda"><u>ODA</u></string>
    <string name="pdo"><u>POD</u> </string>
    <string name="prime">Prime</string>
    <string name="loginforbr">Login For \n Franchisee/Delv Boy/Employee</string>
    <string name="verrifying_otp_message_dialog">Verifying OTP Please wait...</string>
    <string name="message">Request Failed due to reason\n\n • Not a Trackon AWB No \n• Invalid Reference No \n• Old Shipment, prior to 75 days</string>
    <string name="usercode">Enter User Code</string>
    <string name="title_activity_location_maps">Map</string>
    <string name="TodayReport">Today Report</string>
    <string name="Today">Today 10 Parcel Scaned</string>
    <string name="SelectDate">Select Date</string>
    <string name="TrackBarcode">Track Barcode</string>
    <string name="Pending">Pending</string>
    <string name="Delivered">Delivered</string>
    <string name="ParcelToPickUP">Parcel To Pick Up</string>
    <string name="Copyright">Copyright by www.trackon.in,All right Reserved</string>
    <string name="AWB">AWB NO</string>
    <string name="DRS">DRS NO</string>
    <string name="Address">Address</string>
    <string name="Address1">Block M Market,New Moti Mahal Greater Kailash part 1 Delhi,110048</string>
    <string name="DeliveryType">DELIVERY TYPE</string>
    <string name="DeliveryTo">DELIVERY TO</string>
    <string name="ReceiverName">Receiver Name </string>
    <string name="DeliverTo">DELIVER TO</string>
    <string name="DeliveryToPhoneNo">DELIVERY TO PHONE NO</string>
    <string name="PhoneNo">PHONE NO</string>
    <string name="DeliverArea">DELIVER AREA</string>
    <string name="DeliveryTime">Delivery Time</string>
    <string name="PinCode">PINCODE</string>
    <string name="VASTYPE">VAS TYPE</string>
    <string name="VASAMOUNT">VAS AMOUNT</string>
    <string name="VASAMOUNT1">AMOUNT</string>
    <string name="COLLECTIONMODE">COLLECTION MODE</string>
    <string name="COLLECTED">COLLECTED TYPE</string>
    <string name="FROMBRANCH">FROM BRANCH</string>
    <string name="INFAVOROF">INFAVOR OF</string>
    <string name="INFAVOROF1">INFAVOR OF DD/CHEQUE</string>
    <string name="Take">Take Action On Your Delivery</string>
    <string name="Signature">View Signature</string>
    <string name="POD">View POD</string>
    <string name="AttempedStatus">Attempted Status</string>
    <string name="AttempedDate">ATTEMPTED DATE</string>
    <string name="AWBNo">AWB NO</string>
    <string name="Remark">REMARK</string>
    <string name="Reason">Reason</string>
    <string name="UploadS">Upload Signature</string>
    <string name="Capture">Capture Proof of Deliverey</string>
    <string name="CollectedAmount">COLLECTED AMOUNT</string>
    <string name="Exchange">EXCHANGE SHIPEMENT PICKED UP</string>
    <string name="FromBranch">FROM BRANCH</string>
    <string name="UpdateStatus">Update Status</string>
    <string name="ParcelPickUp">Parcel Pick Up</string>
    <string name="MarkAsPickUp">Mark As Pick Up</string>
    <string name="SnoozeForToday">Snooze For Today</string>
    <string name="title_submit">Submit</string>
    <string name="title_verify">Verify</string>
    <string name="title_verified_user">Verified User</string>
    <string name="title_enter_aadhar_no">Enter Aadhar Number</string>
    <string name="title_resend">Resend</string>
    <string name="title_enter_aadhar_mobile_no">Enter Mobile Number Linked with Aadhar</string>
</resources>