<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/freshwhite"
    >

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/efaSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/md_yellow_A700"
        android:text="@string/title_submit"
        android:textColor="@android:color/black"
        android:theme="@style/MyMaterialTheme"
        android:visibility="gone"
        app:icon="@drawable/right"
        app:iconTint="@android:color/black"
        app:rippleColor="@color/md_yellow_700"
        app:strokeColor="@color/md_yellow_700" />

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivAadharImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_aadhar_banner" />

            <LinearLayout
                android:id="@+id/rlAadharCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivAadharImg"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:text="@string/title_enter_aadhar_no"
                    android:textColor="@color/dark_gray"
                    android:textStyle="bold" />


                <RelativeLayout
                    android:id="@+id/rlAadharCardNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:id="@+id/rlVerifyClick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true">

                        <TextView
                            android:id="@+id/tvResend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#ffffff"
                            android:text="@string/title_resend"
                            android:textColor="@color/red"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:visibility="gone" />


                        <TextView
                            android:id="@+id/tvVerify"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#ffffff"
                            android:text="@string/title_verify"
                            android:textColor="@color/green_variant"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="bold"
                            android:visibility="gone" />

                    </RelativeLayout>


                    <EditText
                        android:id="@+id/etaadhar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/rlVerifyClick"
                        android:background="@null"
                        android:digits="0123456789"
                        android:hint="xxxxxxxxxxxx"
                        android:inputType="number"
                        android:maxLength="14"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/black" />


                </RelativeLayout>

                <TextView
                    android:id="@+id/tvVerifiedUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/title_verified_user"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:visibility="gone" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlAadharCardView"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvOtpView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="15dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/freshwhite"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/llOtpView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:lineSpacingMultiplier="1.2"
                            android:text="OTP Verification"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/dark_gray"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:background="#ffffff"
                            android:text="@string/title_enter_aadhar_mobile_no"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/dark_gray"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/etAadharLinkNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_toLeftOf="@+id/rlVerifyClick"
                            android:background="@drawable/edittext_background"
                            android:digits="0123456789"
                            android:gravity="center"
                            android:hint="xxxxxxxxxx"
                            android:inputType="number"
                            android:maxLength="10"
                            android:padding="10dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:lineSpacingMultiplier="1.2"
                            android:text="Enter OTP Code here"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/dark_gray"
                            android:textStyle="bold" />

                        <com.mukesh.OtpView
                            android:id="@+id/otpView"
                            style="@style/OtpWidget.OtpView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="15dp"
                            android:cursorVisible="false"
                            android:inputType="number"
                            android:itemBackground="@drawable/input_background"
                            android:textColor="@color/colorPrimary"
                            app:OtpHideLineWhenFilled="false"
                            app:OtpCursorColor="@color/black"
                            app:OtpItemCount="6"
                            app:OtpItemHeight="35dp"
                            app:OtpItemSpacing="5dp"
                            app:OtpItemWidth="35dp"
                            app:OtpLineColor="@color/graylight"
                            app:OtpState_filled="true"
                            app:OtpViewType="none" />


                        <LinearLayout
                            android:id="@+id/llOtpSection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvTimer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="Timer"
                                android:textAppearance="@android:style/TextAppearance.Medium"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvNote"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center_horizontal"
                                android:ellipsize="end"
                                android:gravity="center"
                                android:inputType="text|textMultiLine"
                                android:padding="10dp"
                                android:text="Don't you received any Code ? Please click on resend option"
                                android:textAllCaps="false"
                                android:textColor="@color/graylight" />

                        </LinearLayout>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnOTPSubmit"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:background="@color/black"
                            android:enabled="true"
                            android:padding="5dp"
                            android:text="Submit"
                            android:textColor="@color/text_view" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvAadharImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="15dp"
                    app:cardBackgroundColor="@color/freshwhite"
                    app:cardCornerRadius="4dp"
                    android:visibility="gone"
                    app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/llAadharImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlAadharCardView"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/blue"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/ivEditAadharOne"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/ic_edit"
                                app:tint="@color/colorPrimary" />

                            <TextView
                                android:id="@+id/tvFrontImageTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:text="Front Image"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </RelativeLayout>

                        <ImageView
                            android:id="@+id/ivAadharImgOne"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:src="@drawable/default_square" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/blue"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/ivEditAadharTwo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/ic_edit"
                                app:tint="@color/colorPrimary" />

                            <TextView
                                android:id="@+id/tvBackImageTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:text=" Back Image"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </RelativeLayout>

                        <ImageView
                            android:id="@+id/ivAadharImgTwo"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:src="@drawable/default_square" />
                    </LinearLayout>

                </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
